tests/machine/x/pl/map_assign.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/map_assign.pl:14: user:main Type error: `nonneg' expected, found `"bob"' (a string)

